@@ -1,3 +1,15 @@
 ######################
 Authors & contributors
 ######################
+
+Maintainer: Benoît Bryon <benoit@marmelune.net>, as a member of the
+`PeopleDoc`_ team: https://github.com/novapost/
+
+Developers: https://github.com/novapost/django-docusign/graphs/contributors
+
+
+.. rubric:: Notes & references
+
+.. target-notes::
+
+.. _`PeopleDoc`: http://www.people-doc.com
