@@ -1,8 +1,9 @@
-recursive-include django-docusign *
+recursive-include django_docusign *
 global-exclude *.pyc
 include AUTHORS
 include CHANGELOG
 include CONTRIBUTING.rst
+include INSTALL
 include LICENSE
 include README.rst
 include VERSION
