@@ -2,11 +2,23 @@
 django-docusign
 ###############
 
-`django-docusign` is a Django application for `DocuSign`_ signature SAAS platform.
+`django-docusign` is a Django application for `DocuSign`_'s digital signature
+SAAS platform.
 
-It uses `pydocusign`_ as lower-level `Python` client.
-
+It uses `pydocusign`_ as `Python` client.
 It implements `django-anysign`_ API.
+
+
+**************
+Project status
+**************
+
+`django-docusign` is under active development. The project is not mature yet,
+but authors already use it! It means that, while API and implementation may
+change (improve!) a bit, authors do care of the changes.
+
+Also, help is welcome! Feel free to report issues, request features or
+refactoring!
 
 
 *********
@@ -14,13 +26,12 @@ Resources
 *********
 
 * Documentation: https://django-docusign.readthedocs.org
-* PyPI page: http://pypi.python.org/pypi/django-docusign
 * Bugtracker: https://github.com/novapost/django-docusign/issues
 * Changelog: https://django-docusign.readthedocs.org/en/latest/about/changelog.html
-* Roadmap: https://github.com/novapost/django-docusign/issues/milestones
+* Roadmap: https://github.com/novapost/django-docusign/milestones
 * Code repository: https://github.com/novapost/django-docusign
 * Continuous integration: https://travis-ci.org/novapost/django-docusign
 
 .. _`DocuSign`: https://www.docusign.com/
-.. _`pydocusign`: https://github.com/novapost/pydocusign/
-.. _`django-anysign`: https://github.com/novapost/django-anysign/
+.. _`pydocusign`: https://pypi.python.org/pypi/pydocusign/
+.. _`django-anysign`: https://pypi.python.org/pypi/django-anysign/
