@@ -1,0 +1,24 @@
+############
+Demo project
+############
+
+`Demo folder in project's repository`_ contains a Django project:
+
+* demo illustrates usage. Examples in documentation are imported from
+  the demo.
+
+* demo contains tests.
+
+* demo can be used as a sandbox in order to try or develop the software.
+
+
+Feel free to use the demo project as a sandbox. See :doc:`/contributing` for
+details about development environment setup.
+
+
+.. rubric:: Notes & references
+
+.. target-notes::
+
+.. _`demo folder in project's repository`:
+   https://github.com/novapost/django-docusign/tree/master/demo/
