@@ -1,0 +1,8 @@
+<html>
+  <head>
+    <title>django-docusign demo</title>
+  </head>
+  <body>
+    <h1>Welcome to django-docusign demo!</h1>
+  </body>
+</html>
