@@ -5,18 +5,14 @@ Created by diecutter on .
 
 This file is execfile()d with the current directory set to its containing dir.
 
-.. note::
-
-   Not all possible configuration values are present in this autogenerated
-   file.
-
-All configuration values have a default; values that are commented out
-serve to show the default.
-
 """
 import os
 import re
 
+
+doc_dir = os.path.dirname(os.path.abspath(__file__))
+project_dir = os.path.dirname(doc_dir)
+version_filename = os.path.join(project_dir, 'VERSION')
 
 # If extensions (or modules to document with autodoc) are in another directory,
 # add these directories to sys.path here. If the directory is relative to the
@@ -30,10 +26,11 @@ import re
 
 # Add any Sphinx extension module names here, as strings. They can be extensions
 # coming with Sphinx (named 'sphinx.ext.*') or your custom ones.
-extensions = [
-    'sphinx.ext.doctest',
-    
-]
+extensions = ['sphinx.ext.autodoc',
+              'sphinx.ext.autosummary',
+              'sphinx.ext.doctest',
+              'sphinx.ext.coverage',
+              'sphinx.ext.intersphinx']
 
 # Add any paths that contain templates here, relative to this directory.
 templates_path = ['_templates']
@@ -49,24 +46,19 @@ master_doc = 'index'
 
 # General information about the project.
 project = u'django-docusign'
-project_slug = re.sub(r'([\w_.-]+)', u'-', project)
+project_slug = re.sub(r'([\W_.-]+)', u'-', project)
 copyright = u'2014 - Benoît Bryon'
 author = u'Benoît Bryon'
-author_slug = re.sub(r'([\w_.-]+)', u'-', author)
+author_slug = re.sub(r'([\W_.-]+)', u'-', author)
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
 # built documents.
-configuration_dir = os.path.dirname(__file__)
-documentation_dir = configuration_dir
-version_file = os.path.normpath(os.path.join(
-    documentation_dir,
-    '../VERSION'))
-
-# The full version, including alpha/beta/rc tags.
-release = open(version_file).read().strip()
+#
 # The short X.Y version.
-version = '.'.join(release.split('.')[0:1])
+version = open(version_filename).read().strip()
+# The full version, including alpha/beta/rc tags.
+release = version
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
@@ -187,6 +179,17 @@ html_sidebars = {
 # Output file base name for HTML help builder.
 htmlhelp_basename = u'{project}doc'.format(project=project_slug)
 
+
+# -- Options for sphinx.ext.intersphinx ---------------------------------------
+
+intersphinx_mapping = {
+    'python': (
+        'http://docs.python.org/2.7',
+        None),
+    'django': (
+        'https://docs.djangoproject.com/en/1.6/',
+        'https://docs.djangoproject.com/en/1.6/_objects/'),
+}
 
 # -- Options for LaTeX output --------------------------------------------------
 
