@@ -1,2 +1,0 @@
--e git+https://github.com/novapost/django-anysign.git#egg=django-anysign
--e git+https://github.com/novapost/pydocusign.git#egg=pydocysign
