@@ -6,10 +6,11 @@ deps =
     coverage
     nose
     rednose
-    -rtox-requirements.txt
 commands =
     pip install -e ./
-    nosetests --with-doctest --no-path-adjustment --nocapture --with-coverage --cover-package=django_docusign --all-modules --rednose django_docusign
+    pip install -e demo/
+    django-docusign-demo test --with-doctest --with-coverage --cover-package=django_docusign django_docusign
+    django-docusign-demo test django_docusign_demo
     coverage erase
     pip freeze
 
@@ -18,12 +19,15 @@ deps =
     flake8
 commands =
     flake8 django_docusign
+    flake8 --exclude=migrations demo
 
 [testenv:sphinx]
 deps =
     Sphinx
 commands =
-    make --directory=docs SPHINXOPTS='-W' clean html
+    pip install -e ./
+    pip install -e demo/
+    make --directory=docs SPHINXOPTS='-W' clean html linkcheck
 whitelist_externals =
     make
 
